Prevent arrows in ext. links from wrapping to next line

--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -245,7 +245,11 @@ a {
 }
 
 a[href*="://"]:not(:where([href*="germanfreixinos.com"], [class*="icon"]))::after {
-    content: " \2197";
+    /*
+        "\00A0" = non-breaking space ( )
+        "\2197" = ↗
+    */
+    content: "\00A0\2197";
 }
 
 .site-nav a {
